--- a/my/i18n/my-MM/common.json
+++ b/my/i18n/my-MM/common.json
@@ -32,5 +32,16 @@
   "impact_title": "သက်ရောက်မှုနှင့် အစီရင်ခံစာများ",
   "donate_title": "ထောက်ပံ့/လှူဒါန်း",
   "get_involved_title": "စေတနာ့ဝန်ထမ်းများနှင့် မိတ်ဖက်များ",
-  "contact_title": "ဆက်သွယ်ရန်"
+  "contact_title": "ဆက်သွယ်ရန်",
+
+  "updates_title": "သတင်းနှင့် အပ်ဒိတ်များ",
+  "updates_subtitle": "နောက်ဆုံးရ သတင်းများ၊ အစီရင်ခံစာများနှင့် ကြေညာချက်များ",
+  "loading": "အသစ်များကို ဖတ်နေသည်…",
+  "load_more": "နောက်ထပ် ဖတ်ရန်",
+  "no_updates": "အသစ်များ မရှိသေးပါ",
+  "search_placeholder": "အသစ်များ ရှာရန်",
+  "all_years": "အားလုံးနှစ်များ",
+  "latest_badge": "နောက်ဆုံး",
+  "read_more": "ဖတ်ရှုရန်",
+  "no_updates_body": "ကျွန်ုပ်တို့၏အစီအစဉ်များနှင့် ငွေကြေးအစီရင်ခံစာများအပေါ် နောက်ဆုံးရ အပ်ဒိတ်များကို ထုတ်ပြန်ပါသည်။ မကြာမီပြန်လည်စစ်ဆေးပါ။"}
 }
