--- a/i18n/my/common.json
+++ b/i18n/my/common.json
@@ -33,6 +33,12 @@
   "nav_join_our_team": "Join our Team",
 
   "about_title": "About TSD Myanmar",
+  "projects_title": "Projects",
+  "impact_title": "Impact & Reports",
+  "donate_title": "Support / Donate",
+  "get_involved_title": "Volunteers & Partners",
+  "contact_title": "Contact",
+
   "updates_title": "သတင်းနှင့် အပ်ဒိတ်များ",
   "updates_subtitle": "နောက်ဆုံးရ သတင်းများ၊ အစီရင်ခံစာများနှင့် ကြေညာချက်များ",
   "loading": "အသစ်များကို ဖတ်နေသည်…",
@@ -42,4 +48,67 @@
   "all_years": "အားလုံးနှစ်များ",
   "latest_badge": "နောက်ဆုံး",
   "read_more": "ဖတ်ရှုရန်",
-  "no_updates_body": "ကျွန်ုပ်တို့၏အစီအစဉ်များနှင့် ငွေကြေးအစီရင်ခံစာများအပေါ် နောက်ဆုံးရ အပ်ဒိတ်များကို ထုတ်ပြန်ပါသည်။ မကြာမီပြန်လည်စစ်ဆေးပါ။"}
+  "no_updates_body": "ကျွန်ုပ်တို့၏အစီအစဉ်များနှင့် ငွေကြေးအစီရင်ခံစာများအပေါ် နောက်ဆုံးရ အပ်ဒိတ်များကို ထုတ်ပြန်ပါသည်။ မကြာမီပြန်လည်စစ်ဆေးပါ။",
+
+  "home_hero": "Together for Sustainable Development — supporting resilient communities in Chin State",
+  "who_we_are_title": "Who We Are",
+  "where_we_work_title": "Where We Work",
+  "what_we_do_title": "What We Do",
+  "relief_drr_title": "Relief & DRR",
+  "our_work_title": "Our Work",
+  "partners_title": "Partnership",
+  "our_approach_title": "Our Approach",
+  "join_our_team_title": "Join our Team",
+  "inclusion_title": "Inclusion",
+  "get_involved_title": "How to Get Involved",
+  "food_security_title": "Food Security",
+  "education_title": "Education",
+  "education_ambassadors_title": "Education Ambassadors",
+  "about_us_title": "About Us",
+  "404_title": "404 — Page not found"
+  ,
+  "home_lead": "We support community-led solutions in Chin State that strengthen education, livelihoods, and primary health through local partnerships, practical training, and long-term capacity building.",
+  "stats_comm_leaders": "Community leaders trained",
+  "stats_active_projects": "Active community projects",
+  "stats_people_reached": "People reached",
+
+  "projects_heading": "Featured projects",
+  "project_water_title": "Community Water & Sanitation",
+  "project_water_body": "Locally managed water systems, latrine construction, and hygiene training reduce water-borne illness and improve attendance at schools and clinics.",
+  "project_agro_title": "Sustainable Agroforestry",
+  "project_agro_body": "Agroforestry demonstrations, tree nurseries, and farmer training improve soil health, diversify income, and strengthen food security for smallholder households.",
+  "project_health_title": "Community Health Workers Program",
+  "project_health_body": "Training and equipping local community health workers improves basic primary care, maternal and child health, and timely referral pathways.",
+
+  "latest_updates_h2": "Latest updates",
+  "see_all_updates": "See all updates",
+
+  "trust_1_title": "Community-led",
+  "trust_1_body": "Programs are co-created with local leaders and reflect community priorities and traditional knowledge.",
+  "trust_2_title": "Transparent reporting",
+  "trust_2_body": "Annual reports, activity summaries, and financial statements are published for accountability.",
+  "trust_3_title": "Ethical partnerships",
+  "trust_3_body": "We collaborate with local organisations and donors committed to sustainable, long-term partnerships."
+  ,
+  "stats_students": "Students benefiting from improved education",
+  "stats_farmers": "Farmers pioneering sustainable farming methods",
+  "stats_people_relief": "People provided with relief items during disasters",
+
+  "programmes_heading": "Our Programmes",
+  "programme_education_title": "Education",
+  "programme_education_body": "Supporting life-long and life-sustaining education from early years through adult learning, including school support and community education activities.",
+  "programme_food_title": "Food Security",
+  "programme_food_body": "Practical farming support, agroforestry, and diversified livelihoods to improve nutrition and household income.",
+  "programme_inclusion_title": "Inclusion",
+  "programme_inclusion_body": "Promoting equitable participation and supporting women's self-help groups, cooperatives, and community leadership.",
+  "programme_relief_title": "Relief & DRR",
+  "programme_relief_body": "Preparedness, response, and distribution of relief items during emergencies together with community disaster committees.",
+
+  "testimonial_quote": "“Participating in this programme has been a turning point for me. It has given me new skills and hope for the future.",
+  "testimonial_author": "— Hraki, Food Security programme participant",
+
+  "footer_contact_title": "Contact",
+  "contact_main_office": "Main Office: Lailenpi Town, Chin State, Myanmar",
+  "contact_main_phone": "Phone: (+95) 976 800 9343",
+  "contact_email": "Email: tsd.info@togethergrowing.org"
+}
