--- a/i18n/en/common.json
+++ b/i18n/en/common.json
@@ -1,5 +1,11 @@
 {
   "site_title": "TSD Myanmar",
+  "drawer_menu": "Menu",
+  "label_language": "Language",
+  "label_theme": "Theme",
+  "theme_system": "System",
+  "theme_light": "Light",
+  "theme_dark": "Dark",
   "nav_home": "Home",
   "nav_about": "About",
   "nav_projects": "Projects",
