Added translation support and footer/header components

--- a/i18n/mrh/common.json
+++ b/i18n/mrh/common.json
@@ -1,42 +1,48 @@
 {
   "site_title": "TSD Myanmar",
   "drawer_menu": "Menu",
+  "drawer_navigation": "Khâ lâ cha",
+  "drawer_close": "Menu khâ",
+  "toggle_navigation": "Khâ lâ cha pa/kha",
   "label_language": "Chaw",
-  "label_theme": "Theme",
+  "label_theme": "A chhei",
   "theme_system": "System",
   "theme_light": "A'âng",
   "theme_dark": "Mih",
-  "nav_home": "Home",
-  "nav_about": "About",
-  "nav_projects": "Projects",
-  "nav_impact": "Impact",
-  "nav_donate": "Donate",
-  "nav_get_involved": "Get Involved",
-  "nav_contact": "Contact",
+  "lang_english": "Mirang chaw",
+  "lang_mara": "Mara chaw",
+  "lang_burmese": "Bama chaw",
+  "nav_home": "Hmâ",
+  "nav_about": "Cha hri",
+  "nav_projects": "Hnâ khâ",
+  "nav_impact": "A châ",
+  "nav_donate": "Pêk",
+  "nav_get_involved": "Bi a châ",
+  "nav_contact": "Bia awh",
 
-  "header_about_us": "About Us",
-  "header_our_work": "Our Work",
-  "header_news": "News",
-  "header_get_involved": "Get Involved",
+  "header_about_us": "Keihnih cha hri",
+  "header_our_work": "Kei hnâ khâ",
+  "header_news": "Thawngka",
+  "header_get_involved": "Bi a châ",
 
-  "nav_about_us": "About Us",
-  "nav_who_we_are": "Who We Are",
-  "nav_contact_us": "Contact Us",
+  "nav_about_us": "Keihnih cha hri",
+  "nav_who_we_are": "Keihnih u ei",
+  "nav_contact_us": "Kei bia awh",
 
-  "nav_where_we_work": "Where We Work",
-  "nav_what_we_do": "What We Do",
-  "nav_our_approach": "Our Approach",
-  "nav_education": "Education",
-  "nav_food_security": "Food Security",
-  "nav_inclusion": "Inclusion",
-  "nav_relief_drr": "Relief & DRR",
+  "nav_where_we_work": "Kei hnâ khâ hmâ",
+  "nav_what_we_do": "Kei a châ ei",
+  "nav_our_approach": "Kei bi châ",
+  "nav_education": "Chhiarnak",
+  "nav_food_security": "Rawl kilkhâ",
+  "nav_inclusion": "A kawm kawmnak",
+  "nav_relief_drr": "Pumpêknak & DRR",
 
-  "nav_updates": "Updates",
-  "nav_updates_reports": "Updates & Reports",
-  "nav_how_to_get_involved": "How to Get Involved",
-  "nav_partnership": "Partnership",
-  "nav_education_ambassadors": "Education Ambassadors",
-  "nav_join_our_team": "Join our Team",
+  "nav_updates": "Thawngka",
+  "nav_updates_reports": "Thawngka & Report",
+  "nav_how_to_get_involved": "Bi a châ âi",
+  "nav_partnership": "Kawl châ",
+  "nav_education_ambassadors": "Chhiarnak Ambassador",
+  "nav_join_our_team": "Kei team kawm",
 
   "about_title": "About TSD Myanmar",
   "projects_title": "Projects",
