--- a/i18n/my/common.json
+++ b/i18n/my/common.json
@@ -1,42 +1,48 @@
 {
   "site_title": "TSD Myanmar",
   "drawer_menu": "မီနူး",
+  "drawer_navigation": "လမ်းညွှန်",
+  "drawer_close": "မီနူးပိတ်ရန်",
+  "toggle_navigation": "လမ်းညွှန်ဖွင့်/ပိတ်",
   "label_language": "ဘာသာစကား",
   "label_theme": "အပြင်အဆင်",
   "theme_system": "စနစ်",
   "theme_light": "အလင်း",
   "theme_dark": "အမှောင်",
-  "nav_home": "Home",
-  "nav_about": "About",
-  "nav_projects": "Projects",
-  "nav_impact": "Impact",
-  "nav_donate": "Donate",
-  "nav_get_involved": "Get Involved",
-  "nav_contact": "Contact",
+  "lang_english": "အင်္ဂလိပ်",
+  "lang_mara": "မာရာ",
+  "lang_burmese": "မြန်မာ",
+  "nav_home": "ပင်မ",
+  "nav_about": "အကြောင်း",
+  "nav_projects": "စီမံကိန်းများ",
+  "nav_impact": "အကျိုးသက်ရောက်မှု",
+  "nav_donate": "လှူဒါန်းရန်",
+  "nav_get_involved": "ပါဝင်ရန်",
+  "nav_contact": "ဆက်သွယ်ရန်",
 
-  "header_about_us": "About Us",
-  "header_our_work": "Our Work",
-  "header_news": "News",
-  "header_get_involved": "Get Involved",
+  "header_about_us": "ကျွန်ုပ်တို့အကြောင်း",
+  "header_our_work": "ကျွန်ုပ်တို့၏လုပ်ငန်း",
+  "header_news": "သတင်း",
+  "header_get_involved": "ပါဝင်ရန်",
 
-  "nav_about_us": "About Us",
-  "nav_who_we_are": "Who We Are",
-  "nav_contact_us": "Contact Us",
+  "nav_about_us": "ကျွန်ုပ်တို့အကြောင်း",
+  "nav_who_we_are": "ကျွန်ုပ်တို့သည်",
+  "nav_contact_us": "ဆက်သွယ်ရန်",
 
-  "nav_where_we_work": "Where We Work",
-  "nav_what_we_do": "What We Do",
-  "nav_our_approach": "Our Approach",
-  "nav_education": "Education",
-  "nav_food_security": "Food Security",
-  "nav_inclusion": "Inclusion",
-  "nav_relief_drr": "Relief & DRR",
+  "nav_where_we_work": "လုပ်ငန်းဆောင်ရွက်ရာနေရာ",
+  "nav_what_we_do": "ကျွန်ုပ်တို့လုပ်ဆောင်ချက်",
+  "nav_our_approach": "ချဉ်းကပ်နည်း",
+  "nav_education": "ပညာရေး",
+  "nav_food_security": "စားနပ်ရိက္ခာဖူလုံရေး",
+  "nav_inclusion": "လူမှုရေးပေါင်းစည်းမှု",
+  "nav_relief_drr": "ကယ်ဆယ်ရေးနှင့် DRR",
 
-  "nav_updates": "Updates",
-  "nav_updates_reports": "Updates & Reports",
-  "nav_how_to_get_involved": "How to Get Involved",
-  "nav_partnership": "Partnership",
-  "nav_education_ambassadors": "Education Ambassadors",
-  "nav_join_our_team": "Join our Team",
+  "nav_updates": "အသစ်များ",
+  "nav_updates_reports": "အသစ်များနှင့် အစီရင်ခံစာများ",
+  "nav_how_to_get_involved": "ပါဝင်နိုင်ပုံ",
+  "nav_partnership": "မိတ်ဖက်အဖွဲ့အစည်း",
+  "nav_education_ambassadors": "ပညာရေးသံတမန်များ",
+  "nav_join_our_team": "အဖွဲ့ဝင်ရန်",
 
   "about_title": "About TSD Myanmar",
   "projects_title": "Projects",
