--- a/i18n/en/common.json
+++ b/i18n/en/common.json
@@ -1,11 +1,17 @@
 {
   "site_title": "TSD Myanmar",
   "drawer_menu": "Menu",
+  "drawer_navigation": "Navigation",
+  "drawer_close": "Close menu",
+  "toggle_navigation": "Toggle navigation",
   "label_language": "Language",
   "label_theme": "Theme",
   "theme_system": "System",
   "theme_light": "Light",
   "theme_dark": "Dark",
+  "lang_english": "English",
+  "lang_mara": "Mara",
+  "lang_burmese": "Burmese",
   "nav_home": "Home",
   "nav_about": "About",
   "nav_projects": "Projects",
